ml_ops/41/k8s/service.yml
# 推論サーバー（推論サーバーAと推論サーバーBで共有）
apiVersion: v1
kind: Service
metadata:
  name: predict-server
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: predict-pod
